09/27
	* Merged exp, item_db, mob_db and mob_skill_db [Playtester]
	- separate exp chart for Ninja/Gunslinger job exp
	- fixed Immaterial Sword to destroy enemy's sp
	- fixed Holden Card combo SP gain bonus
	- fixed some item names
	- implemented official Rachel Sanctuary mob stats and skills
	- raised cast rate a little
09/25
	* Fixed item group 35 (lottobox) in item_misc.txt [Skotlex]
09/20
	* Merged Spider Web being a targetted skill. [Skotlex]
	* Merged Ki Explosion having range 1 and taking weapon's element. [Skotlex]
09/17
	* Changed NPC_CHANGEUNDEAD from a self skill to a targetted skill. Changed
	  it's duration to 30 secs. [Skotlex]
	* Merged mob_db [Playtester]
	- updated some official X.3 drops which I forgot before
	- fixed Thanatos mob names
09/16
	* Added NPC_CHANGEUNDEAD to the skill_cast_db, fixes it apparently doing
	  "nothing". [Skotlex]
	* Merged most of skill_cast_db as well. [Skotlex]
09/14
	* Merged item_db, mob_db, mob_skill_db [Playtester]
	- updated drop rates to official X.3
	- also fixed some related aegis item names
	- made NPC_ATTRICHANGE self targeted
	- fixed Vesper's summon behavior
	* Corrected Smokie's pet script to use petskillbonus instead of "bonus"
	  [Skotlex]
09/11
	* Corrected EAJ_NINJA entry in const.txt [Skotlex]
	* CG_MOONLIT is no longer castable in WoE grounds. [Skotlex]
09/10
	* Merged item_db, mob_db, mob_skill_db [Playtester]
	- updated Unholy Touch attack
	- reorganized combo bonuses
	- changed bCriticalRate -> bCritical
	- small mob updates
	- added official Rachel mob stats & skills
	- removed NPC_POWERUP from Dimik
09/06
	* Updated skill_require_db's entry for Abracadabra, it requires yellow 2
	  gemstones (there's no such hardcoded yellow gemstone requirement anymore)
	  [Skotlex]
	* Corrected db/const.txt entry bMagicSubRace -> bMagicAddSize [Skotlex]
09/05
	* Merged skill_db GS skill info from trunk. [Skotlex]
09/02
	* Merged item_db, mob_db [Playtester]
	- added new items